# cpp_babel

./: .gitignore  README.md  a.out  main.cpp
Audio/: AudioCodec.cpp  AudioCodec.hpp  AudioPA.cpp  AudioPA.hpp  IAudio.hpp  Play.cpp  Play.hpp  Record.cpp  Record.hpp  a.out  main.cpp  new_test.cpp  test.cpp
Client/: CMakeLists.txt  Client  Client.cbp  Client_automoc.cpp  Makefile  main.cpp  moc_QtSocket.cpp
Client/Audio/: AudioCodec.cpp  AudioSettings.h  IAudio.hpp  IAudioCodec.hpp  IPlay.h  IRecorder.h  Play.cpp  Play.hpp  Record.cpp  Record.hpp  a.out
Client/Client_automoc.dir/: moc_QtSocket_O3T6IDXOLBS547.cpp  moc_Window_UK6ZXADQ6E4MBP.cpp
Client/DataManager/: DataManager.cpp  DataManager.h
Client/Exceptions/: Exception.cpp  Exception.h
Client/Socket/: IServer.h  ISocket.cpp  ISocket.h  Message.cpp  Message.h  QtSocket.cpp  QtSocket.h  QtUdpServer.cpp  QtUdpServer.h
Client/src/: Channel.cpp  Channel.h  SoundManager.cpp  SoundManager.h  User.cpp  User.h  Window.cpp  Window.h
Network/: CMakeCache.txt  CMakeLists.txt  Makefile  Network  Network.cbp  cmake_install.cmake  main.cpp
Network/Logger/: Logger.cpp  Logger.h
Network/Serveur/: Server.cpp  Server.h
Network/Serveur/Abstract/: BoostAcceptor.cpp  BoostAcceptor.h  BoostSocket.cpp  BoostSocket.h  ISocket.cpp  ISocket.h  ISocketAcceptor.h
Network/Session/: Channel.cpp  Channel.h  Session.cpp  Session.h  User.cpp  User.h
Network/Session/Message/: Message.cpp  Message.h  a.out  main.cpp
doc/: Object-Oriented
server/: CMakeLists.txt
server/headers/: Client.hh  Server.hh
server/sources/: Client.cpp  Server.cpp  main.cpp
